# xiao-round-display

./: .gitignore  .gitmodules  README.md
app/: CMakeLists.txt  prj.conf  prj_shield.conf
app/boards/: xiao_ble_round_display.overlay  xiao_ble_sense.overlay  xiao_ble_sense_shield.overlay
app/boards/shields/xiao_round_display/: Kconfig.defconfig  Kconfig.shield  xiao_round_display.overlay
app/src/: ble_manager.c  ble_xiaos_control.c  main.c  main.h
app/src/bluetooth/: CMakeLists.txt  ble_manager.c  ble_manager.h  ble_xiaos_control.c  ble_xiaos_control.h  xiao_service.c  xiao_service.h
app/src/display/: CMakeLists.txt  xiao_display.c  xiao_display.h
app/src/display/ui/: CMakeLists.txt  actions.h  fonts.h  images.h  screens.c  screens.h  styles.h  ui.c  ui.h
app/src/include/: ble_manager.h  ble_xiaos_control.h  main.h
app/src/lib/services/: xiao_service.c  xiao_service.h
app/src/rtc/: CMakeLists.txt  xiao_rtc.c  xiao_rtc.h
app/src/sd/: CMakeLists.txt  sd.c  sd.h
app/src/usb/: CMakeLists.txt  cdc.c  cdc.h
drivers/: CMakeLists.txt  Kconfig
drivers/display/gc9a01/: CMakeLists.txt  Kconfig  gc9a01.c
drivers/input/: CMakeLists.txt  Kconfig
drivers/input/chsc6x/: CMakeLists.txt  Kconfig  input_chsc6x.c
dts/bindings/: vendor-prefixes.txt
dts/bindings/display/: seeedrounddisplay,gc9a01.yaml
dts/bindings/input/: seeedrounddisplay,chsc6x.yaml
scripts/: west-commands.yml  xiao_west_command.py
